--- a/sh/client_serv/rest.html
+++ b/sh/client_serv/rest.html
@@ -56,13 +56,42 @@
         503 Service Unavailable: Сервис недоступен.
     </div>
     <br>
-    <h1>Клиент-серверная архитектура:</h1>
-    Система состоит из клиента, который отправляет запросы, и сервера, который обрабатывает эти запросы и отправляет ответы.<br>
+    <b>Клиент-серверная архитектура:</b> Система состоит из клиента, который отправляет запросы, и сервера, который обрабатывает эти запросы и отправляет ответы.<br>
+    <b>Без состояния (Stateless):</b> Каждый запрос клиента должен содержать все необходимые данные для его обработки. Сервер не должен хранить информацию о состоянии клиента между запросами.<br>
+    <b>Кэширование:</b> Сервер может указывать, что определенные ответы могут быть кэшированы на стороне клиента для повторного использования, уменьшая трафик сети и улучшая производительность.<br>
+    <b>Единообразие интерфейса:</b> REST API использует стандартные методы HTTP (GET, POST, PUT, DELETE) для работы с ресурсами. Каждый ресурс должен иметь уникальный идентификатор (URI), и клиенты могут обращаться к ресурсам с помощью URI и методов HTTP.<br>
+    <b>Слои (Layered System):</b> Архитектура может состоять из нескольких слоев, где каждый слой выполняет свою функцию. Клиенты не обязательно знают о всех слоях системы и взаимодействуют только с ближайшим слоем.<br>
+    <br>
+    <h1>Аннотации контроллера:</h1>
     <div class="tab">
-        <b>Без состояния (Stateless):</b> Каждый запрос клиента должен содержать все необходимые данные для его обработки. Сервер не должен хранить информацию о состоянии клиента между запросами.<br>
-        <b>Кэширование:</b> Сервер может указывать, что определенные ответы могут быть кэшированы на стороне клиента для повторного использования, уменьшая трафик сети и улучшая производительность.<br>
-        <b>Единообразие интерфейса:</b> REST API использует стандартные методы HTTP (GET, POST, PUT, DELETE) для работы с ресурсами. Каждый ресурс должен иметь уникальный идентификатор (URI), и клиенты могут обращаться к ресурсам с помощью URI и методов HTTP.<br>
-        <b>Слои (Layered System):</b> Архитектура может состоять из нескольких слоев, где каждый слой выполняет свою функцию. Клиенты не обязательно знают о всех слоях системы и взаимодействуют только с ближайшим слоем.<br>
+        <b>@Controller:</b> MVC Controller работает с HTTP <br>
+        <b>@RestController:</b> работает с JSON или XML <br>
+        <b>@RequestMapping("/api"):</b> указывает путь. На уровне класса или метода <br>
+        <b>@GetMapping, @PostMapping, @PutMapping, @DeleteMapping:</b> варианты @RequestMapping для определённых HTTP методов <br>  
+        <b>@PathVariable:</b><br>
+        <pre>
+        @GetMapping("/greet/{name}")
+        public String greet(@PathVariable String name) {}</pre>
+        <b>@RequestParam:</b><br>
+        <pre>
+        @GetMapping("/greet") // /greet?name=Andrey
+        public String greet(@RequestParam String name) {}</pre>
+        <b>@ResponseBody, @RequestBody :</b><br>
+        <pre>
+        @PostMapping("/processData")
+        @ResponseBody //вернёт в теле ответа
+        public String processData(@RequestBody MyDataObject data) {}</pre>
+        <b>@ResponseStatus :</b><br>
+        <pre>
+        @ResponseStatus(HttpStatus.CREATED)
+        @PostMapping("/create")
+        public void createResource() {}</pre>
+
+
+
+
+
+
     </div>
 </body>
 </html>
