--- a/sh/common.html
+++ b/sh/common.html
@@ -38,6 +38,7 @@
     <h1>Задать структуры данных</h1>
     <div class="tab">
         <b>List:</b> List&ltInteger&gt list = List.of(1, 2, 3); // НЕИЗМЕНЯЕМЫЙ ImmutableCollections$ListN <br>
+        <b>Stream:</b> Stream&ltString&gt stream = Stream.of("str1", "str2", "str3"); <br>
         <b>Array: </b> int[] array = {1, 2, 3, 4, 5};
     </div>
     <br>
