--- a/sh/index.html
+++ b/sh/index.html
@@ -9,6 +9,7 @@
 <body>
 	<div style='text-align:center; width:100%'>
 		<b>
+			<a href=new.html>Новое в Java</a><br>
 			<a href=common.html>Общие</a><br>
 			<a href=memory.html>Память и GC</a><br>
 			<a href=security/security.html>Security</a><br>
@@ -33,8 +34,9 @@
 			<a href=docker.html>Docker</a><br>
 			<a href=kafka.html>Kafka</a><br>
 			<a href=architecture/architecture.html>Архитектура</a><br>
+			<a href=react/react.html>React</a><br>
 			<a href=https://metanit.com/java/tutorial>Метанит JAVA</a><br>
-			<a href=https://chat.openai.com/>GPT-chat</a><br>
+			<a href=https://chat.openai.com>GPT-chat</a><br>
 		</b>
 	</div>
 </body>
