--- a/sh/transaction_isolation.html
+++ b/sh/transaction_isolation.html
@@ -7,19 +7,20 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <h1>Степени изоляции транзакций</h1>
+    <h1>Уровни изоляции транзакций</h1>
     Решают проблемы, связанные с параллельным доступом к данным и обеспечением их целостности.<br><br>
 
     Пр <b>Phantom Read</b> Транзакция при повторном чтении видит новую строку, которую вставила другая транзакция.<br>
-    Реш <b><u>Serializable</u></b><br><br>
+    Пр <b>Lost Update</b> Две транзакции меняют одну строку. Последняя затирает первую. <br>
+    Ур. изоляции <b><u>Serializable</u></b> блокировка таблицы или версии или журнал<br><br>
 
     Пр <b>Non-repeatable Read</b> Транзакция при повторном чтении строки видит изменения внесённые другой транзакцией.<br>
-    Реш <b><u>Repeatable Read</u></b><br><br>
+    Ур. изоляции <b><u>Repeatable Read</u></b> блокировка вычитатанных строк или версии или журнал<br><br>
 
     Пр <b>Dirty Read</b> Транзакция при чтении видит ещё не закоммиченные изменения внесённые другой транзакцией.<br>
-    Реш <b><u>Read Committed</u></b><br><br>
+    Ур. изоляции <b><u>Read Committed</u></b><br><br>
 
     Пр <b></b> <br>
-    Реш <b><u>Read Uncommitted</u></b> Ничего не решает
+    Ур. изоляции <b><u>Read Uncommitted</u></b> Ничего не решает
 </body>
 </html>
