--- a/sh/architecture/microservices.html
+++ b/sh/architecture/microservices.html
@@ -29,7 +29,7 @@
     <h1>Шаблоны микросервисов:</h1>
     <div class="tab">
         <b>1. API Gateway:</b> Сервис - единая точка входа внешнего API, Делает аутентификацию. Кеширует, агрегирует и делегирует запросы к соответствующим микросервисам.<br>
-        <b>2. Service Discovery:</b> Предоставляет центральное хранилище для поиска микросервисов по имени.<br>
+        <b>2. Service Discovery:</b> (Netflix Eureka) Предоставляет центральное хранилище для поиска микросервисов по имени.<br>
         <b>3. Retry:</b> <br>
         <b>4. Circuit Breaker:</b> Отслеживает состояние сервиса и, если он упал, перестаёт отправлять запросы до тех пор, пока сервис не восстановится.<br>
         Состояния: Closed(всё ок), Open, Half-Open.<br>
