--- a/sh/immutable_pojo.html
+++ b/sh/immutable_pojo.html
@@ -18,6 +18,15 @@
         <b>7. java.lang.StackTraceElement</b><br>
     </div>
     <br>
+
+    <h1>Где используются</h1>
+    <div class="tab">
+        <b>1.</b> Как общий ресурс для нескольких потоков <br>
+        <b>2.</b> Как ключ хэштаблицы <br>
+        <b>3.</b> Можно кешировать и повторно использовать (_Pool) <br>
+    </div>
+    <br>
+
     <h1>Immutable POJO</h1>
     <pre>
     public class Human {
