add mobile adaptation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     <header class="header">
         <div class="container">
-            <!-- Header nav -->
             <div class="header-nav">
                 <img src="./img/java.svg" alt="Java" class="header-logo-img">
 
@@ -109,26 +108,26 @@
             <div class="container">
                 <p class="chapter-label">Статьи</p>
                 <div class="chapter-divider"></div>
-                <div class="articles-content" data-aos="flip-up">
-                    <a class="articles-block" href="https://habr.com/ru/articles/342304/" target="_blank">
+                <div class="articles-content">
+                    <a class="articles-block" href="https://habr.com/ru/articles/342304/" target="_blank" data-aos="flip-up">
                         <img src="./img/articles/a1.jpg" alt="article 1">
                         <p>Интересные логические задачи<br>на собеседованиях</p>
                     </a>
-                    <a class="articles-block" href="https://habr.com/ru/articles/342090/" target="_blank">
+                    <a class="articles-block" href="https://habr.com/ru/articles/342090/" target="_blank" data-aos="flip-up">
                         <img src="./img/articles/a2.gif" alt="article 2">
                         <p>Вложенные классы<br>в Java</p>
                     </a>
-                    <a class="articles-block" href="https://habr.com/ru/articles/334848/" target="_blank">
+                    <a class="articles-block" href="https://habr.com/ru/articles/334848/" target="_blank" data-aos="flip-up">
                         <img src="./img/articles/a3.png" alt="article 3">
                         <p>Геометрия<br>в компьютерных играх</p>
                     </a>
-                    <a class="articles-block" href="https://habr.com/ru/articles/330686/" target="_blank">
+                    <a class="articles-block" href="https://habr.com/ru/articles/330686/" target="_blank" data-aos="flip-up">
                         <img src="./img/articles/a4.jpeg" alt="article 4">
                         <p>Создание простейшей<br>2D игры на андроид</p>
                     </a>
                 </div>
             </div>
-        </div>
+        </div> 
 
         <div id="contacts" class="contacts-container">
             <div class="container">
