--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <div class="container">
             <div class="header-nav">
                 <img src="./img/java.svg" alt="Java" class="header-logo-img">
-
                 <nav id="nav" class="nav">
                     <a href="#about" class="nav-link">ПРО МЕНЯ</a>
                     <span class="nav-divider"></span>
@@ -96,6 +95,7 @@
                     <div class="offer-text-container">
                         - Работа над постоянным проектом <br>
                         - Работа freelance <br>
+                        - Вёрстка сайтов <br>
                         - Услуги репетитора <br>
                         - Выполнение учебных заданий <br>
                         - И другие услуги связанные с IT... <br>
@@ -127,7 +127,7 @@
                     </a>
                 </div>
             </div>
-        </div> 
+        </div>
 
         <div id="contacts" class="contacts-container">
             <div class="container">
