--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div class="header-nav">
                 <img src="./img/java.svg" alt="Java" class="header-logo-img">
                 <nav id="nav" class="nav">
-                    <a href="#about" class="nav-link">ПРО МЕНЯ</a>
+                    <a href="#about" class="nav-link">Про меня</a>
                     <span class="nav-divider"></span>
-                    <a href="#offer" class="nav-link">ПРЕДЛОЖЕНИЯ</a>
+                    <a href="#offer" class="nav-link">Предложения</a>
                     <span class="nav-divider"></span>
-                    <a href="#articles" class="nav-link">СТАТЬИ</a>
+                    <a href="#articles" class="nav-link">Статьи</a>
                     <span class="nav-divider"></span>
-                    <a href="#contacts" class="nav-link">КОНТАКТЫ</a>
+                    <a href="#contacts" class="nav-link">Контакты</a>
                 </nav>
                 <button id="nav-btn" class="nav-button">
                     <img id="nav-btn-img" src="./img/icons/menu_open.svg" alt="Nav button">
