--- a/sh/new.html
+++ b/sh/new.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Общие вопросы</title>
+    <title>Новое в Java</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
