--- a/sh/index.html
+++ b/sh/index.html
@@ -34,6 +34,7 @@
 			<a href=docker.html>Docker</a><br>
 			<a href=kafka.html>Kafka</a><br>
 			<a href=architecture/architecture.html>Архитектура</a><br>
+			<a href=aws/aws.html>AWS</a><br>
 			<a href=react/react.html>React</a><br>
 			<a href=https://metanit.com/java/tutorial>Метанит JAVA</a><br>
 			<a href=https://chat.openai.com>GPT-chat</a><br>
