--- a/sh/transaction_isolation.html
+++ b/sh/transaction_isolation.html
@@ -9,18 +9,18 @@
 <body>
     <h1>Уровни изоляции транзакций</h1>
     Решают проблемы, связанные с параллельным доступом к данным и обеспечением их целостности.<br><br>
+	
+	Пр <b></b> <br>
+    Ур. изоляции <b><u>Read Uncommitted</u></b> Ничего не решает<br><br>
+	
+	Пр <b>Dirty Read</b> Транзакция при чтении видит ещё не закоммиченные изменения внесённые другой транзакцией.<br>
+    Ур. изоляции <b><u>Read Committed</u></b><br><br>
+	
+	Пр <b>Non-repeatable Read</b> Транзакция при повторном чтении строки видит изменения внесённые другой транзакцией.<br>
+    Ур. изоляции <b><u>Repeatable Read</u></b> блокировка вычитатанных строк или версии или журнал<br><br>
 
     Пр <b>Phantom Read</b> Транзакция при повторном чтении видит новую строку, которую вставила другая транзакция.<br>
     Пр <b>Lost Update</b> Две транзакции меняют одну строку. Последняя затирает первую. <br>
-    Ур. изоляции <b><u>Serializable</u></b> блокировка таблицы или версии или журнал<br><br>
-
-    Пр <b>Non-repeatable Read</b> Транзакция при повторном чтении строки видит изменения внесённые другой транзакцией.<br>
-    Ур. изоляции <b><u>Repeatable Read</u></b> блокировка вычитатанных строк или версии или журнал<br><br>
-
-    Пр <b>Dirty Read</b> Транзакция при чтении видит ещё не закоммиченные изменения внесённые другой транзакцией.<br>
-    Ур. изоляции <b><u>Read Committed</u></b><br><br>
-
-    Пр <b></b> <br>
-    Ур. изоляции <b><u>Read Uncommitted</u></b> Ничего не решает
+    Ур. изоляции <b><u>Serializable</u></b> блокировка таблицы или версии или журнал
 </body>
 </html>
