--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <img class="foto" src="./img/foto.png" alt="Foto">
                     <div>
                         <p class="label-1">Андрей Колесник<br>
-                            Java разработчи<a target="_blank" href="./sh/index.html">к</a>
+                            Java <a target="_blank" href="randomizer.html">р</a>азработчи<a target="_blank" href="./sh/index.html">к</a>
                         </p>
                     </div>
                 </div>
