--- a/sh/kafka.html
+++ b/sh/kafka.html
@@ -24,5 +24,12 @@
         <b>At least once:</b> по крайней мере один раз, могут быть дублированы.<br>
         <b>Exactly once</b>
     </div>
+    <br>
+    <br>
+    <b>Topic</b> - persistant log of events<br>
+    Events are organized and durably stored in topics<br>
+    Topics are categories or feed names to which records are published<br>
+    events first, things second<br>
+    fire and forget<br>
 </body>
 </html>
