--- a/randomizer.html
+++ b/randomizer.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Randomizer</title>
 <style>
     html, body {
